init Chinese lang

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="links/main.css"/>
   <script src="scripts/portal.js"></script>
   <script src="scripts/sites.js"></script>
-  <title>Webring</title>
+  <title>Webring - 网络指环项目</title>
 </head>
 <body>
   <script>
