--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="links/fonts.css"/>
   <link rel="stylesheet" type="text/css" href="links/main.css"/>
   <script src="scripts/portal.js"></script>
   <script src="scripts/sites.js"></script>
-  <title>Webring - 网络指环项目</title>
+  <title>SaaS Webring - SaaS 网络指环联盟</title>
 </head>
 <body>
   <script>
