--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="links/main.css"/>
   <script src="scripts/portal.js"></script>
   <script src="scripts/sites.js"></script>
-  <title>SaaS Webring - SaaS 网络指环联盟</title>
+  <title>Makers Union - 创作者联盟</title>
 </head>
 <body>
   <script>
